--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,16 @@ certifi==2025.10.5
 charset-normalizer==3.4.4
 contourpy==1.3.3
 cycler==0.12.1
+folium>=0.15.0
 fonttools==4.60.1
+geopandas>=0.14.0
+holidays>=0.35
 idna==3.11
 joblib==1.5.2
 kiwisolver==1.4.9
 matplotlib==3.10.7
 numpy==2.3.4
+osmnx>=1.9.0
 packaging==25.0
 pandas==2.3.3
 pillow==12.0.0
@@ -19,6 +23,7 @@ requests==2.32.5
 scikit-learn==1.7.2
 scipy==1.16.2
 seaborn==0.13.2
+shapely>=2.0.0
 six==1.17.0
 threadpoolctl==3.6.0
 tzdata==2025.2
